# fizika

rust/: Cargo.toml  build.sh  chapter_infos.json  clean 1.mdx  copy_list.txt  dirty copy 2.mdx  dirty.mdx  why we cant have nice things.txt
rust/src/: copy_gradivo.rs  gradivo.rs  html2.rs  lib.rs  main.rs  markdown.rs  scrape_utils.rs  utils.rs
web/: .gitignore  db.sqlite  nuke_db.sh  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1690032839388-6978c467beef3.mjs
web/prisma/: db.sqlite  schema.prisma  seed.ts
web/scripts/: restore.ts
web/src/: root.tsx
web/src/components/: FileManager.tsx  Footer.tsx  Header.tsx  List.tsx  Markdown.tsx  MathDisplay.tsx  MonacoEditor.tsx  Navigation copy.tsx  Navigation.tsx  NavigationNew copy.tsx  NavigationNew.tsx
web/src/env/: schema.ts
web/src/layouts/: Providers.tsx
web/src/routes/: (home) copy.tsx  (home).tsx  2d_list.tsx  account.tsx  array.tsx  ce.tsx  clean.tsx  clean_store.tsx  files.tsx  math.tsx  navtest.tsx  new_list.tsx  schedule.tsx  spring.tsx  test.tsx
web/src/routes/[topic]/: (topic).tsx
web/src/routes/[topic]/[page]/: (page) copy.tsx.old  (page).tsx  page.module.scss
web/src/server/: auth.ts  db.ts
web/src/server/trpc/: context.ts
web/src/server/trpc/router/: _app.ts  titles.ts
