[package]
name = "fizika"
version = "0.1.0"
edition = "2021"
default-run = "fizika"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false } # version 0.9 (latest) doesn't use idle browser timeout
html-escape = "0.2.13"
itertools = "0.11.0"
#quickjs not supported on windows
katex = { version = "0.4.6", features = ["duktape"], default-features = false }
meilisearch-sdk = "0.24.1"
once_cell = "1.18.0"
#katex = "0.4.4"
reqwest = "0.11.18"
select = "0.6.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tendril = "0.4.3"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["registry"] }
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
walkdir = "2.3.3"
wasm-bindgen = "0.2.87"
xml-rs = "0.8.16"
